--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VN Token</title>
+    <title>VN Token - The Future of Gaming</title>
+    
+    <!-- Link to the external styles.css file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
