--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         <h2>About VN Token</h2>
         <p>VN Token is a next-generation cryptocurrency built on the Solana blockchain. It’s fast, scalable, and designed for decentralized applications.</p>
     </section>
+<section id="tokenomics">
+    <h2>Tokenomics</h2>
+    <p>Total Supply: 1,000,000,000 VN Token</p>
+    <p>Token Distribution:</p>
+    <ul>
+        <li>50% for Public Sale</li>
+        <li>20% for Development</li>
+        <li>10% for Partnerships</li>
+        <li>10% for Staking Rewards</li>
+        <li>10% for Team</li>
+    </ul>
+</section>
 
     <section id="roadmap">
         <h2>Our Roadmap</h2>
