--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <p>Total Supply: 1,000,000,000 VN Token</p>
     <p>Token Distribution:</p>
     <ul>
-        <li>50% for Public Sale</li>
-        <li>20% for Development</li>
-        <li>10% for Partnerships</li>
-        <li>10% for Staking Rewards</li>
-        <li>10% for Team</li>
+        <li>5% for Development (Locked)</li>
+        <li>95% for Public Sale</li>
     </ul>
+    <p><em>The 5% allocated for development will be locked until further notice.</em></p>
+</section>
+
 </section>
 
     <section id="roadmap">
