--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             <li>Connect your wallet to Pump.fun and swap SOL for VN Token</li>
         </ol>
     </section>
+<section id="buy-now">
+    <h2>Buy VN Token</h2>
+    <p>Ready to be part of the next big thing in gaming? Buy VN Token now and hold for the future!</p>
+    <a href="https://pump.fun/token/YOUR_TOKEN_ADDRESS" target="_blank">
+        <button>Buy VN Token Now</button>
+    </a>
+</section>
 
     <section id="social-media">
         <h2>Follow Us</h2>
