--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header><img src="assets/logo.png" alt="VNHAX Logo" width="100" height="auto">
+
         <img src="logo.png" alt="VN Token Logo" width="150">
         <h1>Welcome to VN Token</h1>
         <p>Launching on Solana on Pump.fun</p>
