--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header><img src="assets/logo.png" alt="VNHAX Logo" width="100" height="auto">
+    <header><img src="6012646699492819325.avif" alt="VNHAX Logo" width="100" height="auto">
 
         <img src="logo.png" alt="VN Token Logo" width="150">
         <h1>Welcome to VN Token</h1>
