--- a/index.html
+++ b/index.html
@@ -3,70 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="VN Token - The Future of Gaming. Launching on Solana via Pump.fun">
+    <meta name="keywords" content="VN Token, cryptocurrency, Solana, Pump.fun, gaming">
     <title>VN Token - The Future of Gaming</title>
     
     <!-- Link to the external styles.css file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header><img src="6012646699492819325.avif" alt="VNHAX Logo" width="100" height="auto">
-
+    <header>
+        <img src="6012646699492819325.avif" alt="VNHAX Logo" width="100" height="auto">
         <img src="logo.png" alt="VN Token Logo" width="150">
         <h1>Welcome to VN Token</h1>
         <p>Launching on Solana on Pump.fun</p>
     </header>
 
-    <section id="about">
-        <h2>About VN Token</h2>
-        <p>VN Token is a next-generation cryptocurrency built on the Solana blockchain. It’s fast, scalable, and designed for decentralized applications.</p>
-    </section>
-<section id="tokenomics">
-    <h2>Tokenomics</h2>
-    <p>Total Supply: 1,000,000,000 VN Token</p>
-    <p>Token Distribution:</p>
-    <ul>
-        <li>5% for Development (Locked)</li>
-        <li>95% for Public Sale</li>
-    </ul>
-    <p><em>The 5% allocated for development will be locked until further notice.</em></p>
-</section>
+    <main>
+        <section id="about">
+            <h2>About VN Token</h2>
+            <p>VN Token is a next-generation cryptocurrency built on the Solana blockchain. It’s fast, scalable, and designed for decentralized applications.</p>
+        </section>
 
-</section>
+        <section id="tokenomics">
+            <h2>Tokenomics</h2>
+            <p>Total Supply: 1,000,000,000 VN Token</p>
+            <p>Token Distribution:</p>
+            <ul>
+                <li>5% for Development (Locked)</li>
+                <li>95% for Public Sale</li>
+            </ul>
+            <p><em>The 5% allocated for development will be locked until further notice.</em></p>
+        </section>
 
-    <section id="roadmap">
-        <h2>Our Roadmap</h2>
-        <ul>
-            <li>Phase 1: Token Launch on Solana via Pump.fun</li>
-            <li>Phase 2: Listing on major exchanges</li>
-            <li>Phase 3: Expanding the ecosystem with DApps and partnerships</li>
-        </ul>
-    </section>
+        <section id="roadmap">
+            <h2>Our Roadmap</h2>
+            <ul>
+                <li>Phase 1: Token Launch on Solana via Pump.fun</li>
+                <li>Phase 2: Listing on major exchanges</li>
+                <li>Phase 3: Expanding the ecosystem with DApps and partnerships</li>
+            </ul>
+        </section>
 
-    <section id="how-to-buy">
-        <h2>How to Buy VN Token</h2>
-        <p>Follow these steps to buy VN Token:</p>
-        <ol>
-            <li>Create a wallet that supports Solana (e.g., Phantom Wallet, Sollet)</li>
-            <li>Buy SOL on an exchange like Binance or FTX</li>
-            <li>Connect your wallet to Pump.fun and swap SOL for VN Token</li>
-        </ol>
-    </section>
-<section id="buy-now">
-    <h2>Buy VN Token</h2>
-    <p>Ready to be part of the next big thing in gaming? Buy VN Token now and hold for the future!</p>
-    <a href="https://pump.fun/token/YOUR_TOKEN_ADDRESS" target="_blank">
-        <button>Buy VN Token Now</button>
-    </a>
-</section>
+        <section id="how-to-buy">
+            <h2>How to Buy VN Token</h2>
+            <p>Follow these steps to buy VN Token:</p>
+            <ol>
+                <li>Create a wallet that supports Solana (e.g., Phantom Wallet, Sollet)</li>
+                <li>Buy SOL on an exchange like Binance or FTX</li>
+                <li>Connect your wallet to Pump.fun and swap SOL for VN Token</li>
+            </ol>
+        </section>
 
-    <section id="social-media">
-        <h2>Follow Us</h2>
-        <a href="https://twitter.com/vnhaxcoin" target="_blank">Twitter</a> |
-        <a href="https://t.me/vnhaxcoin" target="_blank">Telegram</a>
-    </section>
+        <section id="buy-now">
+            <h2>Buy VN Token</h2>
+            <p>Ready to be part of the next big thing in gaming? Buy VN Token now and hold for the future!</p>
+            <a href="https://pump.fun/token/YOUR_TOKEN_ADDRESS" target="_blank">
+                <button>Buy VN Token Now</button>
+            </a>
+        </section>
 
-   
-    </section>
+        <section id="social-media">
+            <h2>Follow Us</h2>
+            <a href="https://twitter.com/vnhaxcoin" target="_blank">Twitter</a> |
+            <a href="https://t.me/vnhaxcoin" target="_blank">Telegram</a>
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2025 VN Token | All Rights Reserved</p>
