--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         </section>
 
         <section id="tokenomics">
-            <h2>Tokenomics</h2>
+           <h2>Tokenomics</h2>
             <p>Total Supply: 1,000,000,000 VN Token</p>
             <p>Token Distribution:</p>
             <ul>
                 <li>5% for Development (Locked)</li>
-                <li>95% for Public Sale</li>
+                <li>2% for Team</li>
+                <li>93% for Public Sale</li>
             </ul>
             <p><em>The 5% allocated for development will be locked until further notice.</em></p>
-        </section>
 
         <section id="roadmap">
             <h2>Our Roadmap</h2>
