--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
         <section id="tokenomics">
            <h2>Tokenomics</h2>
-            <p>Total Supply: 1,000,000,000 VN Token</p>
-            <p>Token Distribution:</p>
-            <ul>
-                <li>5% for Development (Locked)</li>
-                <li>2% for Team</li>
-                <li>93% for Public Sale</li>
-            </ul>
-            <p><em>The 5% allocated for development will be locked until further notice.</em></p>
+            <h2>Total Supply: 1,000,000,000 VNHAX Token</h2>
+<h3>Token Distribution:</h3>
+<ul>
+    <li><strong>5% for Development</strong> (Locked until further notice)</li>
+    <li><strong>2% for Team</strong></li>
+    <li><strong>93% for Public Sale</strong></li>
+</ul>
+
 
         <section id="roadmap">
             <h2>Our Roadmap</h2>
