--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
     <main>
         <section id="about">
             <h2>About VN Token</h2>
-            <p>VN Token is a next-generation cryptocurrency built on the Solana blockchain. It’s fast, scalable, and designed for decentralized applications.</p>
-        </section>
+<p>
+    VN Token is a high-performance cryptocurrency built on the Solana blockchain, offering lightning-fast transactions, low fees, and unmatched scalability.  
+    Designed for decentralized applications, VN Token powers a seamless ecosystem for gaming, digital assets, and secure transactions.
+</p>
+<p>
+    <strong>VNHAX</strong> offers a premium set of tools and features that significantly enhance your gaming experience.  
+    Designed with both security and performance in mind, VNHAX provides unparalleled advantages while ensuring the safety of your main account  
+    with its guaranteed <strong>Antiban protection</strong>.
+</p>
+
 
         <section id="tokenomics">
            <h2>Tokenomics</h2>
