--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <h1>Welcome to VN Token</h1>
         <p>Launching on Solana on Pump.fun</p>
     </header>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About VN Token</a></li>
+    </ul>
+</nav>
 
     <main>
         <section id="about">
