--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About VN Token</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your stylesheet if any -->
 </head>
 <body>
     <header>
@@ -17,16 +17,37 @@
     </header>
 
     <main>
-        <h1>About VN Token</h1>
-        <p>
-            VN Token is a high-performance cryptocurrency built on the Solana blockchain, offering lightning-fast transactions, low fees, and unmatched scalability.  
-            Designed for decentralized applications, VN Token powers a seamless ecosystem for gaming, digital assets, and secure transactions.
-        </p>
-        <p>
-            <strong>VNHAX</strong> offers a premium set of tools and features that significantly enhance your gaming experience.  
-            Designed with both security and performance in mind, VNHAX provides unparalleled advantages while ensuring the safety of your main account  
-            with its guaranteed <strong>Antiban protection</strong>.
-        </p>
+        <section id="about-vn-token">
+            <h1>About VN Token</h1>
+
+            <h2>Short Description (Bullet Points):</h2>
+            <ul>
+                <li><strong>Booster & ESP:</strong> Includes performance-boosting features such as ESP Wall and Loot ESP to help identify enemies and valuable items from a distance.</li>
+                <li><strong>Aimbot & Magic:</strong> Precision targeting with Aimbot and enhanced gameplay control using Magic for an unbeatable advantage.</li>
+                <li><strong>Kill Message:</strong> Personalize your kill messages to showcase your victories in a unique style.</li>
+                <li><strong>Guaranteed Antiban Protection:</strong> Designed to protect your main account, ensuring your gaming experience remains safe and secure.</li>
+                <li><strong>Enhanced Gameplay:</strong> Boost your performance and stay ahead of the competition with premium, optimized features.</li>
+                <li><strong>Secure and Optimized:</strong> Built for long-term use with a focus on stability and security.</li>
+            </ul>
+
+            <h2>Long Description (Complete Details):</h2>
+            <p><strong>VNHAX</strong> offers a premium set of tools and features that significantly elevate your gaming experience. Tailored for serious gamers, <strong>VNHAX</strong> provides an edge in gameplay while ensuring your main account remains protected with our guaranteed Antiban protection. The combination of security and performance makes <strong>VNHAX</strong> a powerful tool for gamers seeking the ultimate in-game advantage.</p>
+
+            <h3>Key Features:</h3>
+            <ul>
+                <li><strong>Booster & ESP:</strong> Improve in-game performance with the Booster feature, while ESP tools like ESP Wall and Loot ESP help you spot enemies and valuable loot from a distance, giving you a tactical advantage.</li>
+                <li><strong>Aimbot & Magic:</strong> With Aimbot, achieve pinpoint accuracy, while the Magic feature grants additional control over your gameplay, enhancing both strategy and performance.</li>
+                <li><strong>Kill Message:</strong> Customize and personalize your kill messages, adding an extra layer of satisfaction and style to your victories.</li>
+                <li><strong>Antiban Guarantee:</strong> Play with confidence, knowing <strong>VNHAX</strong> is equipped with advanced Antiban technology, safeguarding your account and allowing you to enjoy long-term use without any risk of bans.</li>
+                <li><strong>Optimized for Performance:</strong> <strong>VNHAX</strong> is designed for maximum efficiency, providing an optimized solution that ensures smooth and seamless gameplay, even during intense sessions.</li>
+            </ul>
+
+            <p>With <strong>VNHAX</strong>, you’ll have the tools you need to dominate every match, level up faster, and outshine the competition. It's the perfect toolset for serious gamers who want to enhance their performance while keeping their account safe. Whether you're looking to climb the ranks, win more matches, or enjoy a smooth gaming experience, <strong>VNHAX</strong> ensures you're always ahead.</p>
+        </section>
     </main>
+
+    <footer>
+        <p>&copy; 2025 VN Token. All rights reserved.</p>
+    </footer>
 </body>
 </html>
