--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About VN Token</title>
+    <title>About VNHAX </title>
     <link rel="stylesheet" href="styles.css"> <!-- Link to your stylesheet if any -->
 </head>
 <body>
@@ -11,14 +11,14 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About VN Token</a></li>
+                <li><a href="about.html">About VNHAX </a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="about-vn-token">
-            <h1>About VN Token</h1>
+            <h1>About VNHAX </h1>
 
             <h2>Short Description (Bullet Points):</h2>
             <ul>
