--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         </section>
 
         <section id="how-to-buy">
-            <h2>How to Buy VN Token</h2>
+            <h2>How to Buy VNHAX Token</h2>
             <p>Follow these steps to buy VN Token:</p>
             <ol>
                 <li>Create a wallet that supports Solana (e.g., Phantom Wallet, Sollet)</li>
                 <li>Buy SOL on an exchange like Binance or FTX</li>
-                <li>Connect your wallet to Pump.fun and swap SOL for VN Token</li>
+                <li>Connect your wallet to Pump.fun and swap SOL for VNHAX Token</li>
             </ol>
         </section>
 
         <section id="buy-now">
-            <h2>Buy VN Token</h2>
+            <h2>Buy VNHAX Token</h2>
             <a href="https://pump.fun/token/YOUR_TOKEN_ADDRESS" target="_blank">
-                <button>Buy VN Token Now</button>
+                <button>Buy VNHAX Token Now</button>
             </a>
         </section>
 
@@ -76,7 +76,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 VN Token | All Rights Reserved</p>
+        <p>&copy; 2025 VNHAX Token | All Rights Reserved</p>
     </footer>
 </body>
 </html>
